# YuriaViewer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  callbacks.c  compile.sh  compile_osx.sh  fractal.c  fragment.glsl  fragment_32.glsl  fragment_64.glsl  includes.h  main.c  shaders.c  shaders.h  single.glsl  structs.h  utils.c  utils.h  vertex.glsl  wscript
samples/: 0.in  1.in  2.in  3.in
scripts/: msys.sh
shaders/: fragment_32.glsl  fragment_64.glsl
src/: CMakeLists.txt  callbacks.c  includes.h  main.c  program.c  program.h  shaders.c  shaders.h  structs.h  utils.c  utils.h
